Added basic ObjectParser. Doesn't handle booleans or null yet. Added tests for ObjectParser. Added ParseValue interfaces for generic parser output. ObjectParser uses them, but JsonParser doesn't yet. Added Json output classes for parsing to a JSON string.

--- a/json.csproj
+++ b/json.csproj
@@ -47,6 +47,9 @@
     <Compile Include="JsonParser.cs" />
     <Compile Include="JsonParserTests.cs" />
     <Compile Include="JsonObject.cs" />
+    <Compile Include="ObjectParser.cs" />
+    <Compile Include="ParseValues.cs" />
+    <Compile Include="JsonOutputValues.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
