Added ParseValue types for booleans and null. Changed ParseString and ParseNumber into abstract classes to encapsulate basic store value, add to object/array methods. Not sure if I want to do the same for ParseObject and ParseArray. Added boolean and null support to ObjectParser.

--- a/json.csproj
+++ b/json.csproj
@@ -50,6 +50,7 @@
     <Compile Include="ObjectParser.cs" />
     <Compile Include="ParseValues.cs" />
     <Compile Include="JsonOutputValues.cs" />
+    <Compile Include="ObjectParserTests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
