Added TypeDefinition and PropertyDefinition classes. TypeDefinition keeps track of known types. ObjectParser now uses TypeDefinition instead of doing its own reflecting.

--- a/json.csproj
+++ b/json.csproj
@@ -51,6 +51,8 @@
     <Compile Include="ParseValues.cs" />
     <Compile Include="JsonStringBuilder.cs" />
     <Compile Include="ObjectParserTests.cs" />
+    <Compile Include="TypeDefinition.cs" />
+    <Compile Include="PropertyDefinition.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
