Moved TypedObjectBuilder tests into their own file and added more tests. ObjectParser now returns ParseValue. Added generic TypedObjectBuilder.GetResult that properly handles collections.

--- a/json.csproj
+++ b/json.csproj
@@ -55,6 +55,7 @@
     <Compile Include="PropertyDefinition.cs" />
     <Compile Include="TypedObjectBuilder.cs" />
     <Compile Include="CollectionDefinition.cs" />
+    <Compile Include="TypedObjectBuilderTests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
