--- a/json.csproj
+++ b/json.csproj
@@ -56,6 +56,8 @@
     <Compile Include="TypedObjectBuilder.cs" />
     <Compile Include="CollectionDefinition.cs" />
     <Compile Include="TypedObjectBuilderTests.cs" />
+    <Compile Include="PreBuildAttribute.cs" />
+    <Compile Include="PreDeserializeJsonAttribute.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
