JsonStringString now escapes strings. Added test class for JsonStringBuilder. Will fill out with tests later :)

--- a/json.csproj
+++ b/json.csproj
@@ -58,6 +58,7 @@
     <Compile Include="TypedObjectBuilderTests.cs" />
     <Compile Include="PreBuildAttribute.cs" />
     <Compile Include="PreDeserializeJsonAttribute.cs" />
+    <Compile Include="JsonStringBuilderTests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
