--- a/json.csproj
+++ b/json.csproj
@@ -38,27 +38,32 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="TokenReader.cs" />
-    <Compile Include="Scanner.cs" />
-    <Compile Include="Token.cs" />
-    <Compile Include="ParseException.cs" />
     <Compile Include="GeneralExtensions.cs" />
-    <Compile Include="ScannerTests.cs" />
-    <Compile Include="JsonParser.cs" />
-    <Compile Include="JsonParserTests.cs" />
-    <Compile Include="JsonObjectBuilder.cs" />
-    <Compile Include="ObjectParser.cs" />
     <Compile Include="ParseValues.cs" />
-    <Compile Include="JsonStringBuilder.cs" />
-    <Compile Include="ObjectParserTests.cs" />
-    <Compile Include="TypeDefinition.cs" />
-    <Compile Include="PropertyDefinition.cs" />
-    <Compile Include="TypedObjectBuilder.cs" />
-    <Compile Include="CollectionDefinition.cs" />
-    <Compile Include="TypedObjectBuilderTests.cs" />
-    <Compile Include="PreBuildAttribute.cs" />
-    <Compile Include="PreDeserializeJsonAttribute.cs" />
-    <Compile Include="JsonStringBuilderTests.cs" />
+    <Compile Include="Objects\CollectionDefinition.cs" />
+    <Compile Include="Objects\ObjectParser.cs" />
+    <Compile Include="Objects\ObjectParserTests.cs" />
+    <Compile Include="Objects\PreBuildAttribute.cs" />
+    <Compile Include="Objects\PropertyDefinition.cs" />
+    <Compile Include="Objects\TypeDefinition.cs" />
+    <Compile Include="Objects\TypedObjectBuilder.cs" />
+    <Compile Include="Objects\TypedObjectBuilderTests.cs" />
+    <Compile Include="JSONObjects\JsonObjectBuilder.cs" />
+    <Compile Include="JSON\JsonParser.cs" />
+    <Compile Include="JSON\JsonParserTests.cs" />
+    <Compile Include="JSON\JsonStringBuilder.cs" />
+    <Compile Include="JSON\JsonStringBuilderTests.cs" />
+    <Compile Include="JSON\ParseException.cs" />
+    <Compile Include="JSON\PreDeserializeJsonAttribute.cs" />
+    <Compile Include="JSON\Scanner.cs" />
+    <Compile Include="JSON\ScannerTests.cs" />
+    <Compile Include="JSON\Token.cs" />
+    <Compile Include="JSON\TokenReader.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <Folder Include="JSON\" />
+    <Folder Include="JSONObjects\" />
+    <Folder Include="Objects\" />
+  </ItemGroup>
 </Project>
