Added JsonObjectParser and some tests for it. Not complete yet, but most of the way there.

--- a/json.csproj
+++ b/json.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="GeneralExtensions.cs" />
+    <Compile Include="JsonObjects\JsonObjectParser.cs" />
     <Compile Include="Parse.cs" />
     <Compile Include="ParseValues.cs" />
     <Compile Include="Objects\CollectionDefinition.cs" />
