Moved JsonObjectParserTests into its own file. Moved TestParseObject & TestParseArray into their own file - will probably split all the ParseValue types out into their own files at some point. Added test for JsonObjectParser.ParseSubObject.

--- a/json.csproj
+++ b/json.csproj
@@ -67,6 +67,7 @@
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="GeneralExtensions.cs" />
     <Compile Include="JsonObjects\JsonObjectParser.cs" />
+    <Compile Include="JsonObjects\JsonObjectParserTests.cs" />
     <Compile Include="Parse.cs" />
     <Compile Include="ParseValues.cs" />
     <Compile Include="Objects\CollectionDefinition.cs" />
@@ -88,6 +89,7 @@
     <Compile Include="JSON\Token.cs" />
     <Compile Include="JSON\TokenReader.cs" />
     <Compile Include="JsonObjects\JsonObjectBuilder.cs" />
+    <Compile Include="TestParseValues.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
