Added PreDeserializeAttribute. Switched TypedObjectBuilderTests.PreDeserializeUpgrade over to use PreDeserializeAttribute.

--- a/json.csproj
+++ b/json.csproj
@@ -68,6 +68,7 @@
     <Compile Include="GeneralExtensions.cs" />
     <Compile Include="JsonObjects\JsonObjectParser.cs" />
     <Compile Include="JsonObjects\JsonObjectParserTests.cs" />
+    <Compile Include="JsonObjects\PreDeserializeAttribute.cs" />
     <Compile Include="Parse.cs" />
     <Compile Include="ParseValues.cs" />
     <Compile Include="Objects\CollectionDefinition.cs" />
