Added tests for all of TypedObjectBuilder's exceptions. TypedObjectBuilder only changes type of object if new type is subclass of old type, so type conversion is now possible. Replaced TypedObjectUnknownTypeArray with TypedObjectNullArray since it was only being used for non-existant object properties. JsonParser catches ParseExceptions and re-throws with more useful message.

--- a/json.csproj
+++ b/json.csproj
@@ -70,6 +70,7 @@
     <Compile Include="JsonObjects\JsonObjectParser.cs" />
     <Compile Include="JsonObjects\JsonObjectParserTests.cs" />
     <Compile Include="JsonObjects\PreDeserializeAttribute.cs" />
+    <Compile Include="NullParseValues.cs" />
     <Compile Include="Objects\ReferenceEqualityComparer.cs" />
     <Compile Include="Objects\TypeHelper.cs" />
     <Compile Include="Parse.cs" />
@@ -117,4 +118,5 @@
     <None Include="packages.config" />
     <None Include="TODO" />
   </ItemGroup>
+  <ItemGroup />
 </Project>
