Can deserialize to objects/properties with abstract types that are marked as Serializable. Can specify attribute types for which TypeDefinition will ignore properties that are marked with them. ObjectParser.ParseSubObject maintains options.

--- a/json.csproj
+++ b/json.csproj
@@ -72,6 +72,7 @@
     <Compile Include="JsonObjects\PreDeserializeAttribute.cs" />
     <Compile Include="NullParseValues.cs" />
     <Compile Include="Objects\ReferenceEqualityComparer.cs" />
+    <Compile Include="Objects\TypeDefinitionTests.cs" />
     <Compile Include="Objects\TypeHelper.cs" />
     <Compile Include="Parse.cs" />
     <Compile Include="ParseValues.cs" />
