Split Parsers and ParseValueFactorys into Input & Output folders, keeping their old namespace. Split private ParseValue classes out into their own files.
--HG--
rename : Json/JsonParser.cs => Json/Input/JsonParser.cs
rename : Json/JsonParserTests.cs => Json/Input/JsonParserTests.cs
rename : Json/ParseException.cs => Json/Input/ParseException.cs
rename : Json/Scanner.cs => Json/Input/Scanner.cs
rename : Json/ScannerTests.cs => Json/Input/ScannerTests.cs
rename : Json/Token.cs => Json/Input/Token.cs
rename : Json/TokenReader.cs => Json/Input/TokenReader.cs
rename : Json/ValueFactory/JsonStringArray.cs => Json/Output/JsonStringArray.cs
rename : Json/ValueFactory/JsonStringBoolean.cs => Json/Output/JsonStringBoolean.cs
rename : Json/ValueFactory/JsonStringBuilder.cs => Json/Output/JsonStringBuilder.cs
rename : Json/ValueFactory/JsonStringBuilderTests.cs => Json/Output/JsonStringBuilderTests.cs
rename : Json/ValueFactory/JsonStringNull.cs => Json/Output/JsonStringNull.cs
rename : Json/ValueFactory/JsonStringNumber.cs => Json/Output/JsonStringNumber.cs
rename : Json/ValueFactory/JsonStringObject.cs => Json/Output/JsonStringObject.cs
rename : Json/ValueFactory/JsonStringObjectReference.cs => Json/Output/JsonStringObjectReference.cs
rename : Json/ValueFactory/JsonStringString.cs => Json/Output/JsonStringString.cs
rename : JsonObjects/JsonObjectParser.cs => JsonObjects/Input/JsonObjectParser.cs
rename : JsonObjects/JsonObjectParserTests.cs => JsonObjects/Input/JsonObjectParserTests.cs
rename : JsonObjects/JsonObjectBuilder.cs => JsonObjects/Output/JsonObjectBuilder.cs
rename : JsonObjects/JsonObjectBuilderTests.cs => JsonObjects/Output/JsonObjectBuilderTests.cs
rename : Objects/ObjectParser.cs => Objects/Input/ObjectParser.cs
rename : Objects/ObjectParserTests.cs => Objects/Input/ObjectParserTests.cs
rename : Objects/TypedObjectBuilder.cs => Objects/Output/TypedObjectBuilder.cs
rename : Objects/TypedObjectBuilderTests.cs => Objects/Output/TypedObjectBuilderTests.cs
rename : 

--- a/json.csproj
+++ b/json.csproj
@@ -70,43 +70,68 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="GeneralExtensions.cs" />
-    <Compile Include="JsonObjects\JsonObjectBuilderTests.cs" />
-    <Compile Include="JsonObjects\JsonObjectParser.cs" />
-    <Compile Include="JsonObjects\JsonObjectParserTests.cs" />
+    <Compile Include="JsonObjects\Input\JsonObjectParser.cs" />
+    <Compile Include="JsonObjects\Input\JsonObjectParserTests.cs" />
+    <Compile Include="JsonObjects\JsonObject.cs" />
+    <Compile Include="JsonObjects\Output\JsonObjectBuilder.cs" />
+    <Compile Include="JsonObjects\Output\JsonObjectBuilderTests.cs" />
     <Compile Include="JsonObjects\PreDeserializeAttribute.cs" />
-    <Compile Include="Json\ValueFactory\JsonStringArray.cs" />
-    <Compile Include="Json\ValueFactory\JsonStringBoolean.cs" />
-    <Compile Include="Json\ValueFactory\JsonStringNull.cs" />
-    <Compile Include="Json\ValueFactory\JsonStringNumber.cs" />
-    <Compile Include="Json\ValueFactory\JsonStringObject.cs" />
-    <Compile Include="Json\ValueFactory\JsonStringObjectReference.cs" />
-    <Compile Include="Json\ValueFactory\JsonStringString.cs" />
-    <Compile Include="NullParseValues.cs" />
+    <Compile Include="Json\Output\JsonStringArray.cs" />
+    <Compile Include="Json\Output\JsonStringBoolean.cs" />
+    <Compile Include="Json\Output\JsonStringNull.cs" />
+    <Compile Include="Json\Output\JsonStringNumber.cs" />
+    <Compile Include="Json\Output\JsonStringObject.cs" />
+    <Compile Include="Json\Output\JsonStringObjectReference.cs" />
+    <Compile Include="Json\Output\JsonStringString.cs" />
+    <Compile Include="Objects\Output\TypedObjectNull.cs" />
+    <Compile Include="Objects\Output\TypedObjectBoolean.cs" />
+    <Compile Include="Objects\Output\TypedObjectNumber.cs" />
+    <Compile Include="Objects\Output\TypedObjectString.cs" />
+    <Compile Include="Objects\Output\TypedObjectParseObject.cs" />
+    <Compile Include="Objects\Output\TypedObjectRegularObject.cs" />
+    <Compile Include="Objects\Output\TypedObjectDictionary.cs" />
+    <Compile Include="Objects\Output\TypedObjectArray.cs" />
+    <Compile Include="Objects\Output\TypedObjectNullArray.cs" />
+    <Compile Include="Objects\Output\TypedObjectTypedArray.cs" />
+    <Compile Include="Objects\Output\TypedObjectObject.cs" />
+    <Compile Include="Output\NullParseValues.cs" />
+    <Compile Include="Objects\Input\ObjectParser.cs" />
+    <Compile Include="Objects\Input\ObjectParserTests.cs" />
+    <Compile Include="Objects\Output\TypedObjectBuilder.cs" />
+    <Compile Include="Objects\Output\TypedObjectBuilderTests.cs" />
     <Compile Include="Objects\ReferenceEqualityComparer.cs" />
     <Compile Include="Objects\TypeDefinitionTests.cs" />
     <Compile Include="Objects\TypeHelper.cs" />
+    <Compile Include="Output\ArrayValueFactory.cs" />
+    <Compile Include="Output\ContextValueFactory.cs" />
+    <Compile Include="Output\ParseArray.cs" />
+    <Compile Include="Output\ParseArrayBase.cs" />
+    <Compile Include="Output\ParseBoolean.cs" />
+    <Compile Include="Output\ParseNull.cs" />
+    <Compile Include="Output\ParseNumber.cs" />
+    <Compile Include="Output\ParseObject.cs" />
+    <Compile Include="Output\ParseObjectBase.cs" />
+    <Compile Include="Output\ParseString.cs" />
+    <Compile Include="Output\ParseValueFactory.cs" />
+    <Compile Include="Output\PropertyValueFactory.cs" />
     <Compile Include="Parse.cs" />
-    <Compile Include="ParseValues.cs" />
+    <Compile Include="Parser.cs" />
+    <Compile Include="Output\ParseValue.cs" />
     <Compile Include="Objects\CollectionDefinition.cs" />
-    <Compile Include="Objects\ObjectParser.cs" />
-    <Compile Include="Objects\ObjectParserTests.cs" />
     <Compile Include="Objects\PreBuildAttribute.cs" />
     <Compile Include="Objects\PropertyDefinition.cs" />
     <Compile Include="Objects\TypeDefinition.cs" />
-    <Compile Include="Objects\TypedObjectBuilder.cs" />
-    <Compile Include="Objects\TypedObjectBuilderTests.cs" />
-    <Compile Include="Json\JsonParser.cs" />
-    <Compile Include="Json\JsonParserTests.cs" />
-    <Compile Include="Json\ValueFactory\JsonStringBuilder.cs" />
-    <Compile Include="Json\ValueFactory\JsonStringBuilderTests.cs" />
-    <Compile Include="Json\ParseException.cs" />
+    <Compile Include="Json\Input\JsonParser.cs" />
+    <Compile Include="Json\Input\JsonParserTests.cs" />
+    <Compile Include="Json\Output\JsonStringBuilder.cs" />
+    <Compile Include="Json\Output\JsonStringBuilderTests.cs" />
+    <Compile Include="Json\Input\ParseException.cs" />
     <Compile Include="Json\PreDeserializeJsonAttribute.cs" />
-    <Compile Include="Json\Scanner.cs" />
-    <Compile Include="Json\ScannerTests.cs" />
-    <Compile Include="Json\Token.cs" />
-    <Compile Include="Json\TokenReader.cs" />
-    <Compile Include="JsonObjects\JsonObjectBuilder.cs" />
-    <Compile Include="TestParseValues.cs" />
+    <Compile Include="Json\Input\Scanner.cs" />
+    <Compile Include="Json\Input\ScannerTests.cs" />
+    <Compile Include="Json\Input\Token.cs" />
+    <Compile Include="Json\Input\TokenReader.cs" />
+    <Compile Include="Output\TestParseValues.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
