--- a/json.csproj
+++ b/json.csproj
@@ -83,6 +83,11 @@
     <Compile Include="Json\Output\JsonStringObject.cs" />
     <Compile Include="Json\Output\JsonStringObjectReference.cs" />
     <Compile Include="Json\Output\JsonStringString.cs" />
+    <Compile Include="Objects\DictionaryDefinition.cs" />
+    <Compile Include="Objects\EnumerableDefinition.cs" />
+    <Compile Include="Objects\Input\ArrayParserValueFactory.cs" />
+    <Compile Include="Objects\Input\ObjectParserValueFactory.cs" />
+    <Compile Include="Objects\Input\ParserValueFactory.cs" />
     <Compile Include="Objects\Output\TypedObjectNull.cs" />
     <Compile Include="Objects\Output\TypedObjectBoolean.cs" />
     <Compile Include="Objects\Output\TypedObjectNumber.cs" />
@@ -94,6 +99,8 @@
     <Compile Include="Objects\Output\TypedObjectNullArray.cs" />
     <Compile Include="Objects\Output\TypedObjectTypedArray.cs" />
     <Compile Include="Objects\Output\TypedObjectObject.cs" />
+    <Compile Include="Objects\PreBuildInfo.cs" />
+    <Compile Include="Objects\DefaultTypeDefinition.cs" />
     <Compile Include="Output\NullParseValues.cs" />
     <Compile Include="Objects\Input\ObjectParser.cs" />
     <Compile Include="Objects\Input\ObjectParserTests.cs" />
