Removed AddType methods from ParseObject & ParseArray - AddToObject & AddToArray implementations must now cast the object/array to the expected type and use their methods. TypedObjectBuilder's objects now get objects & values from TypeDefinition. Guids can now be parsed from strings.

--- a/json.csproj
+++ b/json.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Objects\PreBuildInfo.cs" />
     <Compile Include="Objects\TypeDefinitions\DefaultTypeDefinition.cs" />
     <Compile Include="Objects\TypeDefinitions\GuidDefinition.cs" />
+    <Compile Include="Objects\TypeDefinitions\ValueTypeDefinition.cs" />
     <Compile Include="Output\NullParseValues.cs" />
     <Compile Include="Objects\Input\ObjectParser.cs" />
     <Compile Include="Objects\Input\ObjectParserTests.cs" />
