Serializing objects only serializes type identifiers for interface/abstract type properties. Created a StateStack class for stacking state objects. Replaced Parser.contextValueFactories with a StateStack.

--- a/json.csproj
+++ b/json.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Json\Input\Token.cs" />
     <Compile Include="Json\Input\TokenReader.cs" />
     <Compile Include="Output\TestParseValues.cs" />
+    <Compile Include="StateStack.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
