--- a/json.csproj
+++ b/json.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Objects\Output\TypedObjectConstructorOnlyObject.cs" />
     <Compile Include="Objects\Output\TypedObjectParseObjectBase.cs" />
     <Compile Include="Objects\SerializeTypeAttribute.cs" />
+    <Compile Include="Objects\TypeDefinitions\AnonymousTypeDefinition.cs" />
     <Compile Include="Objects\TypeDefinitions\DictionaryDefinition.cs" />
     <Compile Include="Objects\TypeDefinitions\JsonArrayDefinition.cs" />
     <Compile Include="Objects\TypeDefinitions\JsonDictionaryDefinition.cs" />
