--- a/Serializer/json.csproj
+++ b/Serializer/json.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Objects\SerializeTypeAttribute.cs" />
     <Compile Include="Objects\TypeDefinitions\AnonymousTypeDefinition.cs" />
     <Compile Include="Objects\TypeDefinitions\DictionaryDefinition.cs" />
+    <Compile Include="Objects\TypeDefinitions\EnumerableDefinition.cs" />
     <Compile Include="Objects\TypeDefinitions\JsonArrayDefinition.cs" />
     <Compile Include="Objects\TypeDefinitions\JsonDictionaryDefinition.cs" />
     <Compile Include="Objects\TypeDefinitions\SequenceDefinition.cs" />
