--- a/Serializer/json.csproj
+++ b/Serializer/json.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Json\Output\JsonStringObjectReference.cs" />
     <Compile Include="Json\Output\JsonStringString.cs" />
     <Compile Include="Objects\DefaultTypeHandler.cs" />
+    <Compile Include="Objects\ObjectInterfaceProvider.cs" />
     <Compile Include="Objects\NullTypeDefinition.cs" />
     <Compile Include="Objects\ObjectParsingOptions.cs" />
     <Compile Include="Objects\Output\ConstructorOnlyObject.cs" />
@@ -89,6 +90,8 @@
     <Compile Include="Objects\Output\TypedObjectBase.cs" />
     <Compile Include="Objects\Output\TypedPrimitiveValue.cs" />
     <Compile Include="Objects\Output\TypedValue.cs" />
+    <Compile Include="Objects\PropertyDefinitionBuilder.cs" />
+    <Compile Include="Objects\ReflectionInterfaceProvider.cs" />
     <Compile Include="Objects\SerializeTypeAttribute.cs" />
     <Compile Include="Objects\TypeDefinitions\AnonymousTypeDefinition.cs" />
     <Compile Include="Objects\TypeDefinitions\EnumerableDefinition.cs" />
