--- a/Serializer/json.csproj
+++ b/Serializer/json.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Json\Output\JsonStringObject.cs" />
     <Compile Include="Json\Output\JsonStringObjectReference.cs" />
     <Compile Include="Json\Output\JsonStringString.cs" />
+    <Compile Include="Objects\ConstructorDefinition.cs" />
     <Compile Include="Objects\DefaultTypeHandler.cs" />
     <Compile Include="Objects\ObjectInterfaceProvider.cs" />
     <Compile Include="Objects\NullTypeDefinition.cs" />
@@ -90,6 +91,7 @@
     <Compile Include="Objects\Output\TypedObjectBase.cs" />
     <Compile Include="Objects\Output\TypedPrimitiveValue.cs" />
     <Compile Include="Objects\Output\TypedValue.cs" />
+    <Compile Include="Objects\ParameterDefinition.cs" />
     <Compile Include="Objects\PropertyDefinitionBuilder.cs" />
     <Compile Include="Objects\ReflectionInterfaceProvider.cs" />
     <Compile Include="Objects\SerializeTypeAttribute.cs" />
