--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -50,11 +50,14 @@
     <Compile Include="Json\Input\ScannerTests.cs" />
     <Compile Include="Json\Output\JsonStringBuilderTests.cs" />
     <Compile Include="Objects\Input\ObjectReaderTests.cs" />
+    <Compile Include="Objects\Output\DynamicMethodProviderStructTests.cs" />
+    <Compile Include="Objects\Output\DynamicMethodProviderClassTests.cs" />
     <Compile Include="Objects\Output\TypedObjectBuilderTests.cs" />
     <Compile Include="Objects\Output\TypedObjectConstructorOnlyObjectTests.cs" />
     <Compile Include="Objects\TypeDefinitionTests.cs" />
     <Compile Include="Output\TestOutputs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReflectionTesting.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
